--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
-/shared
+/shared/*
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
