Modify .gitignore to include for public files

--- a/.gitignore
+++ b/.gitignore
@@ -29,12 +29,15 @@ capybara-*.html
 /db/*.sqlite3-journal
 /public/system
 /public
+/public/assets/
 /coverage/
 /spec/tmp
 **.orig
 rerun.txt
 pickle-email-*.html
 /shared/*
+/shared/pid
+/shared/log
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
