--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 /shared/*
-/shared/pid
-/shared/log
+/shared/pid/*
+/shared/log/*
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
