--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ pickle-email-*.html
 /shared/*
 /shared/pid/*
 /shared/log/*
+/shared/log/unicorn.stderr.log
+/shared/pids/unicorn.pid
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
